# MAVROS-EXAMPLES

./: CLAUDE.md  CMakeLists.txt  README.md  package.xml
doc/: README_CN.md
src/circle/: README.md  README_CN.md  circle.py
src/circle/launch/: circle.launch
src/circle_wind_resist/: README.md  README_CN.md  circle_wind_resist.py
src/circle_wind_resist/launch/: circle_wind_resist.launch
src/cylinder/: README.md  README_CN.md  cylinder.py
src/cylinder/launch/: cylinder.launch
src/cylinder_wind_resist/: README.md  README_CN.md  cylinder_wind_resist.py
src/cylinder_wind_resist/launch/: cylinder_wind_resist.launch
src/figure8/: README.md  README_CN.md  figure8.py
src/figure8/launch/: figure8.launch
src/figure8_wind_resist/: README.md  README_CN.md  figure8_wind_resist.py
src/figure8_wind_resist/launch/: figure8_wind_resist.launch
src/helix/: README.md  README_CN.md  helix.py
src/helix/launch/: helix.launch
src/helix_wind_resist/: README.md  README_CN.md  helix_wind_resist.py
src/helix_wind_resist/launch/: helix_wind_resist.launch
src/rectangle/: README.md  README_CN.md  rectangle.py
src/rectangle/launch/: rectangle.launch
src/rectangle_wind_resist/: README.md  README_CN.md  rectangle_wind_resist.py
src/rectangle_wind_resist/launch/: rectangle_wind_resist.launch
