<?xml version="1.0"?>
<package format="2">
  <name>mavros_examples</name>
  <version>1.0.0</version>
  <description>MAVROS trajectory examples including circle, rectangle, cylinder and 3D figures with wind resistance options</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>mavros</depend>
  <depend>tf</depend>

  <exec_depend>python3-numpy</exec_depend>

  <export>
  </export>
</package>
